--- a/registration.html
+++ b/registration.html
@@ -95,8 +95,8 @@
    <div class="container container11" style="padding: 0;">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 0;background: #f1f4f6">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 0!important;">
-                    <div><a href="regform.pdf" target="_blank"><h3 style="text-align: center;">Register here</h3></a>
-                    </div>
+                    <!--<div><a href="regform.pdf" target="_blank"><h3 style="text-align: center;">Register here</h3></a>
+                    </div>-->
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="margin-top: 15px;color:#2080c3;font-weight: bolder;border-bottom: 2px solid #0D449C;padding: 0 0 5px 15px!important;font-size: 1.1em;"> <span>Registration Charges:-</span> </div>
                         <div class="panel-body" style="padding: 20px 20px 20px 10px;margin-bottom:0;background: #ffffff;">
                             <table class="table table-responsive">
