--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		</div>
 	</div>
 
- <section id="feature" >
+ <section id="feature" style="padding-top: 40px;margin-bottom: 3px;margin-top: 3px; ">
         <div class="container">
            <div class="center wow fadeInDown">
                 <h2>About the Conference</h2>
@@ -179,7 +179,7 @@ Objective of Conference
 et dolore magna aliqua. Ut enim ad minim veniam
   </div>  -->
 
-   <section id="feature" style="margin-top: 10px">
+   <section id="feature" >
         <div class="container">
            <div class="center wow fadeInDown">
                 <h2>About JECRC</h2>
